<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/menu_search"
    android:icon="@android:drawable/ic_search_category_default"
    android:title="@string/menu_search"
    android:actionViewClass="android.widget.SearchView"
    android:showAsAction="ifRoom|collapseActionView"/>
<item
    android:id="@+id/menu_add"
    android:icon="@drawable/ic_menu_compose"
    android:title="@string/menu_add"
    android:showAsAction="ifRoom|withText"/>

<!--新增-->
    <!-- 在 res/menu/list_options_menu.xml 中添加 -->
    <item
        android:id="@+id/menu_filter"
        android:title="@string/menu_filter"
        android:showAsAction="never">
        <menu>
            <item
                android:id="@+id/filter_all"
                android:title="@string/filter_all"
                android:checkable="true"
                android:checked="true"/>
            <item
                android:id="@+id/filter_thing"
                android:title="@string/category_thing"
                android:checkable="true"/>
            <item
                android:id="@+id/filter_record"
                android:title="@string/category_record"
                android:checkable="true"/>
            <item
                android:id="@+id/filter_essay"
                android:title="@string/category_essay"
                android:checkable="true"/>
            <item
                android:id="@+id/filter_other"
                android:title="@string/category_other"
                android:checkable="true"/>
        </menu>
    </item>

</menu>